feat: form processing

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <form class="form" id="form" action="">
       <fieldset>
         <label><b>First name</b></label>
-        <input type="text" name="FName">
+        <input type="text" name="FName" id="FName">
       </fieldset>
       <fieldset>
         <label><b>Last name</b></label>
-        <input type="text" name="LName">
+        <input type="text" name="LName" id="LName">
       </fieldset>
       <fieldset>
         <label><b>Email</b></label>
-        <input type="email" name="Email">
+        <input type="email" name="Email" id="Email">
       </fieldset>
       <fieldset>
         <label><b>Phone Number</b></label>
-        <input type="tel" name="Phone">
+        <input type="tel" name="Phone" id="Phone">
       </fieldset>
       <fieldset>
         <label><b>Sex</b></label>
